# SubtitleAI

./: .gitignore  Cargo.toml  build.rs
proto/: chat.proto
src/: audio.rs  main.rs
src/audio/: filter.rs  processing.rs  wav_writer.rs
src/audio/filter/: bandpass_filter.rs
src/audio/hardware/: input.rs
src/audio/hardware/input/: audio_input_device.rs  audio_input_device_manager.rs  microphone.rs
src/audio/processing/: audio_segment.rs
